<!-- bottom_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/calender"
        android:icon="@drawable/calendar_24"
        android:title="@string/trip"
        android:enabled="true"
        app:cnb_backgroundColor="@color/colorPrimary_50"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/performance"
        android:icon="@drawable/performance"
        android:title="@string/map"
        android:enabled="true"
        app:cnb_backgroundColor="@color/colorPrimary_50"
        app:cnb_iconColor="@color/colorPrimary"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white"
        />
    <item
    android:id="@+id/profile"
    android:icon="@drawable/profile"
    android:title="@string/profile"
    android:enabled="true"
    app:cnb_backgroundColor="@color/colorPrimary_50"
    app:cnb_iconColor="@color/colorPrimary"
    app:cnb_iconTintMode="src_in"
    app:cnb_textColor="@color/white"/>
</menu>