<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/cl"
    tools:context=".ui.fragments.">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal10"
        app:srcCompat="@drawable/logo"
        android:tint="@color/colorPrimary_50"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:includeFontPadding="false"
        android:text="@string/welcome"
        android:autoSizeTextType="uniform"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/learning_is_fun_with_us"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.app.electricstations.util.editTextKhayat.SSCustomEdittextOutlinedBorder
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textEmailAddress"
        android:minHeight="40dp"
        app:isErrorEnable="false"
        android:imeOptions="actionNext"
        android:gravity="center_vertical"
        app:custom_component_editText_hint="@string/email"
        app:custom_component_hide_title="true"
        app:custom_component_title="@string/email_title"
        app:custom_component_title_color="@color/dark_blue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.app.electricstations.util.editTextKhayat.SSCustomEdittextOutlinedBorder
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textPassword"
        android:minHeight="40dp"
        app:isErrorEnable="false"
        android:imeOptions="actionDone"
        android:gravity="center_vertical"
        app:custom_component_editText_hint="@string/pass"
        app:custom_component_hide_title="true"
        app:custom_component_title="@string/pass_title"
        app:custom_component_title_color="@color/dark_blue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_bg_item_white"
        />

    <com.app.electricstations.util.LoadingButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:minHeight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:lb_btnColor="@color/colorPrimary"
        app:lb_btnDisabledColor="@color/colorPrimary_50"
        app:lb_btnText="@string/login"
        app:lb_cornerRadius="10dp"
        app:lb_disabledTextColor="@color/white"
        app:lb_min_height="40dp"
        app:lb_resetAfterFailed="true" />


</androidx.constraintlayout.widget.ConstraintLayout>